# wavetables-in-faust

./: .gitmodules  CMakeLists.txt
faust/: wavetables.lib
sources/: dr_wav_library.c  main.cpp
sources/sfizz/: Wavetables.cpp  Wavetables.h
